Thu Apr 30 01:40:11 1998  Torben Weis  <weis@localhost>

	* koPartSelectDia.h (class KoPartSelectDia): Added "KoPartSelectDia"
