@@ -1,3 +1,14 @@
+Mon May  4 14:29:33 1998  Torben Weis  <weis@localhost>
+
+	* koPageLayoutDia.cc (KoPageLayoutDia): i18n stuff
+
+	* koPrintDia.cc (print): KoPrintDia::print can now
+	  handle callbacks for the page layout.
+
+Sun May  3 19:05:35 1998  Torben Weis  <weis@localhost>
+
+	* koPrintDia.cc (slotPrinter): Added printer dialog
+
 Thu Apr 30 01:40:11 1998  Torben Weis  <weis@localhost>
 
 	* koPartSelectDia.h (class KoPartSelectDia): Added "KoPartSelectDia"
